added new asset packs substituted assets for test map added new asset for First aid kit

--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,6 @@ DerivedDataCache/*
 Content/StarterContent/*
 Content/IndustryPropsPack6/*
 Content/FPS_Weapon_Bundle/*
+Content/Construction_VOL1/*
+Content/Construction_VOL2/*
+Content/VehicleVarietyPack/*
