--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Level_03.Level_03
-EditorStartupMap=/Game/Maps/Level_03.Level_03
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
+EditorStartupMap=/Game/Maps/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/BP_QPGameMode.BP_QPGameMode_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
