--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,4 @@ Content/FPS_Weapon_Bundle/*
 Content/Construction_VOL1/*
 Content/Construction_VOL2/*
 Content/VehicleVarietyPack/*
+Content/MilitaryWeapSilver/*
