video settings expandable module is created, in character code: fixed health and stamina value represented throw bars in HUD

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,6 +5,7 @@ GlobalDefaultGameMode=/Game/BP_QPGameMode.BP_QPGameMode_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
+FrameRateLock=PUFRL_60
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/QuarantineProject")
